style: Improve the css/styles.css file with header spacing fixes and disables.

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,15 @@ a {
   width: 100%;
   height: 475px;
 }
+
+#title-block-header.quarto-title-block.default .quarto-title-meta-heading {
+  display: none;
+}
+
+h2,
+.h2 {
+  opacity: 0.9;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
